# ruv_downloads

./: .claude-flow  .gitattributes  .gitignore  ARCHITECTURE_REVIEW.md  EJEMPLO_DE_USO.md  GUIA_ESTRUCTURA_PROYECTOS_RUV.md  How_to_decompress_the_packages.md  IMPLEMENTATION_REPORT.md  MANIFEST.md  PRD-JLMA-AGITS-NEURAL-TRADER-INTEGRATION.md  README.md  RUV_DOWNLOADS_COMPLETE_GUIDE.md  ruv_world.sh  submodules_to_remove.txt
.github/: dependabot.yml
.github/workflows/: update_ruvnet.yml
agentic-payments-0.1.13/completions/: agentic-payments.bash  fish.fish
artifacts/: .gitignore  index.json
cache/: .gitignore
crates/: README.md  crates.dynamic.txt  crates.unavailable.txt  download_ruvnet_crates.sh
crates/00_crates/: exo-backend-classical-0.1.0.crate  exo-core-0.1.0.crate  exo-exotic-0.1.0.crate  exo-federation-0.1.0.crate  exo-hypergraph-0.1.0.crate  exo-manifold-0.1.0.crate  exo-node-0.1.0.crate  exo-temporal-0.1.0.crate  exo-wasm-0.1.0.crate  intrinsic-dim-0.0.0.crate  micro-hnsw-wasm-2.3.0.crate  ruvector-attention-0.1.0.crate  ruvector-attention-node-0.1.0.crate  ruvector-attention-wasm-0.1.0.crate  ruvector-cli-0.1.22.crate  ruvector-cluster-0.1.22.crate  ruvector-collections-0.1.22.crate  ruvector-core-0.1.18.crate  ruvector-core-0.1.21.crate  ruvector-core-0.1.22.crate  ruvector-filter-0.1.22.crate  ruvector-gnn-0.1.25.crate  ruvector-gnn-node-0.1.22.crate  ruvector-graph-0.1.25.crate  ruvector-graph-node-0.1.22.crate  ruvector-graph-wasm-0.1.22.crate  ruvector-metrics-0.1.22.crate  ruvector-node-0.1.22.crate  ruvector-postgres-0.2.2.crate  ruvector-postgres-0.2.6.crate  ruvector-raft-0.1.22.crate  ruvector-replication-0.1.22.crate  ruvector-router-cli-0.1.22.crate  ruvector-router-core-0.1.25.crate  ruvector-scipix-0.1.16.crate  (+11 more)
docs/: ARCHITECTURE.md  ARCHITECTURE_SUMMARY.md  INTEGRATION_GUIDE.md  QA_REPORT.md  QA_STRATEGY.md  TECHNICAL_DECISIONS.md
github/: download_ruvnet_repos.sh  repo-index.json  repos.dynamic.txt
github/by-tier/tier-1-active/QuDAG/examples/bitchat/: Cargo.toml
github/by-tier/tier-1-active/QuDAG/examples/bitchat/benches/: crypto_bench.rs
github/by-tier/tier-1-active/QuDAG/examples/bitchat/qemu/: run_qemu.sh
github/by-tier/tier-1-active/QuDAG/examples/bitchat/src/: bench.rs  desktop_main.rs  lib.rs  main.rs
github/by-tier/tier-1-active/QuDAG/examples/bitchat/src/crypto/: encryption.rs  identity.rs  mod.rs  session.rs
github/by-tier/tier-1-active/QuDAG/examples/bitchat/src/network/: discovery.rs  mod.rs  peer.rs  transport.rs
github/by-tier/tier-1-active/QuDAG/examples/bitchat/src/protocol/: envelope.rs  handshake.rs  message.rs  mod.rs
github/by-tier/tier-1-active/QuDAG/examples/bitchat/src/storage/: mod.rs
github/by-tier/tier-1-active/QuDAG/examples/bitchat/src/ui/: display.rs  mod.rs
github/by-tier/tier-1-active/QuDAG/examples/bitchat/tests/: security_tests.rs
lib/: cache.sh  checksum.sh  parallel.sh
logs/: .gitignore  README.md
manifests/: crates.txt  gists.txt  packages.txt  repos.txt
npmjs/: README.md  download_ruvnet_packages.sh  foxruv-iris-1.7.7.tgz  foxruv-iris-1.8.0.tgz  npm_output.txt  packagelist.dynamic.txt  ruvector-core-darwin-arm64-0.1.3.tgz  ruvector-core-darwin-x64-0.1.3.tgz  ruvector-core-linux-arm64-gnu-0.1.3.tgz
scripts/: download_all_optimized.sh  download_crates_optimized.sh  download_gists_optimized.sh  download_npm_optimized.sh  download_repos_optimized.sh  ruv_index.sh  ruv_query.sh  setup_directories.sh  test_cache.sh  test_crates_download.sh
tests/: DELIVERABLES.md  README.md  run_all_tests.sh  test_cache.sh  test_checksum.sh  test_integration.sh  test_performance.sh
(+39858 files in other folders)
